[tool.poetry]
name = "pygeon"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
meshio = "^5.0.0"
networkx = "^2.3"
sympy = "^1.4"
matplotlib = "^3.0.3"
cython = "^3.0.5"
future = "^0.17.1"
six = "^1.12.0"
shapely = {extras = ["vectorized"], version = "^1.7.0"}
numba = ">=0.53.0"
scipy = "^1.4.1"
numpy = "^1.18.5"
gmsh = "^4.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-runner = "^6.0"
black = "23.3.0"
mypy = "^1.4"
flake8 = "^5.0.4"
typing_extensions = "^4.7"

[build-system]
requires = ["poetry>=0.12", "setuptools"]
build-backend = "poetry.masonry.api"
