# Configuration file inspired by PorePy

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project information.
[project]
name = "pygeon"
version = "0.5.0"
description = "a Python package for GEO-Numerics"
readme = "Readme.md"
license = { text = "GPL" }
keywords = ["porous media mixed-dimensional modeling structure-preserving"]
maintainers = [
    { name = "Wietse M. Boon", email = "wietseboon@gmail.com" },
    { name = "Alessio Fumagalli", email = "alessio.fumagalli@polimi.it" },
]
urls = { "Homepage" = "https://github.com/compgeo-mox/pygeon" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "deepdiff",
    "future",
    "gmsh",
    "matplotlib < 3.11",
    "meshio",
    "networkx",
    "numba",
    "numpy < 2.2",
    "scipy",
    "seaborn",
    "shapely",
    "six",
    "sympy",
    "typing_extensions",
]

[project.optional-dependencies]
development = [
    "isort",
    "ruff",
    "mypy",
    "mypy-extensions",
    "traitlets"
]
testing = [
    "nbconvert",
    "pytest >= 4.6",
    "pytest-cov",
    "pytest-runner"
]

# Information for the build system.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pygeon" = [
    "py.typed",
]

# Testing.
[tool.pytest.ini_options]
python_files = "tests/*.py"
addopts = "--cov=src/pygeon --cov-report term-missing -p no:warnings"

# Static analysis.
[tool.ruff.lint]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E266",  # too many leading '#' for block comment
]
exclude = [
    "src/pygeon/__init__.py",
]
