# Configuration file inspired by PorePy

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

# Project information.
[project]
name = "pygeon"
version = "0.5.0"
description = "a Python package for GEO-Numerics"
readme = "Readme.md"
license = { text = "GPL" }
keywords = ["porous media mixed-dimensional modeling structure-preserving"]
maintainers = [
    { name = "Wietse M. Boon", email = "wietseboon@gmail.com" },
    { name = "Alessio Fumagalli", email = "alessio.fumagalli@polimi.it" },
]
urls = { "Homepage" = "https://github.com/compgeo-mox/pygeon" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License (GPL)",
    "Operating System :: OS Independent"
]
dependencies = [
    "porepy[development,testing] @ git+https://github.com/pmgbergen/porepy.git@develop",
    "pyvista"
]

# Information for the build system.
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pygeon" = [
    "py.typed",
]

# Testing.
[tool.pytest.ini_options]
python_files = "tests/*.py"
addopts = [
    "--cov=src/pygeon",
    "--cov-report=term-missing",
    "-p", "no:warnings",
    "-m", "not tutorials"
]

# Static analysis.
[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E501"]
ignore = [
    "E731",  # do not assign a lambda expression, use a def
    "E266",  # too many leading '#' for block comment
]
exclude = [
    "src/pygeon/__init__.py",
]

# MyPy
[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["import-untyped"]